--- a/index.html
+++ b/index.html
@@ -279,7 +279,51 @@
     </section>
     <br>
 
+    <section>
+      <div class="container has-text-centered has-text-white">
+        <h1 class="title is-size-2 has-text-white">Project: LIRI NodeJS App</h1>
+        <div class="columns">
+          <div class="column is-half">
+            <figure class="image is-3by1">
+              <img src="css/logo_transparency.png" alt="project-004">
+            </figure>
+            <br>
+            <a class="button is-link" href="https://drive.google.com/file/d/1UaC9sAGDD_OXXHnanDL0MpaYCEH_8Bfl/view" target="_blank">UI Recording Example</a>
+            <a class="button is-link" href="https://github.com/salmonshoe/liri-node-app" target="_blank">Source Code</a>
+            <hr>
+            <p>Search for any song you like, any artist you want to see on tour, or any movie that comes across your mind! With LIRI you can type 
+              what you choose to search under these parameters and the Language Interpretation and Recognition Interface will handle your requests.
+            </p>
+            <br>
+            <ul class="is-size5 is-pulled-left">
+              <li><span class="icon"><i class="fab fa-node-js"></i></span> NodeJS</li>
+            </ul>
+          </div>
 
+          <div class="column is-half">
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
+              <p>To use the Command Line through NodeJS to take in music and movieparameters from the user, then spit back data the user requests.
+              </p>
+            </div>
+            <br>
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
+              <p> Using the Spotify API was a challenge as reference errors were persistant and the use of objects had to be accurate enough to display correctly. 
+              </p>
+            </div>
+            <br>
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
+              <p>I read through the spotify npm to understand how to use the documentation and ensure my process was following the directions given. It eased this assignment much more!</p>
+            </div>
+            <br>
+          </div>
+        </div>
+      </div>
+    </section>
+    <br>
+    
     <div class="hero-foot has-background-grey ">
       <nav class="tabs">
         <div class="container has-text-centered">
