Add another project section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <div class="column is-multiline">
             <h1 class="is-size-1"><strong class="has-text-grey-light">//Rafael-Reynoso</strong></h1>
             <br>
-            <h3 class="is-size-3 has-text-grey-light"> Hey there! I am a Philadelphia based web developer who has a passion for providing
+            <h3 class="is-size-3 has-text-grey-light"> Hey there! I am a Philadelphia based web developer who has a
+              passion for providing
               content creators and entrepreneurs with the tools they need to succeed online.
               I take pride in helping clients spend less time on logistics and more time doing the things they love.
             </h3>
@@ -142,30 +143,38 @@
           <div class="column is-half">
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
-              <p>In this project I helped my group connecting to the Lyrics.ovh API and building the Firebase storage of User
-                information. Not only would Firebase store user inputs of searched artists, but I worked to get the most searched
+              <p>In this project I helped my group connecting to the Lyrics.ovh API and building the Firebase storage of
+                User
+                information. Not only would Firebase store user inputs of searched artists, but I worked to get the most
+                searched
                 musicians to populate on the website's index page.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p>There was a learning curve to manipulate and modify data on Firebase! In the beginning it was focused on preventing the 
-                database from storing new data for artists already searched, then directing searches to its proper objects.
+              <p>There was a learning curve to manipulate and modify data on Firebase! In the beginning it was focused
+                on preventing the
+                database from storing new data for artists already searched, then directing searches to its proper
+                objects.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>Firebase stores the new searches under a key name no matter what node you direct the search entries onto. The solution to 
-                this challenge was to target the entry key upon each artist search, and attach it as an id for a specific musician.
+              <p>Firebase stores the new searches under a key name no matter what node you direct the search entries
+                onto. The solution to
+                this challenge was to target the entry key upon each artist search, and attach it as an id for a
+                specific musician.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Notable Features</strong></div>
-              <p>My group and I managed to implement ajax calls to four different APIs. iTunes API for the music preview, BandsInTown to 
-                populate when the artist is on tour, Lyrics.ovh to get the lyrics from the top three songs and a Wikipedia API for a short bio on the musician.
+              <p>My group and I managed to implement ajax calls to four different APIs. iTunes API for the music
+                preview, BandsInTown to
+                populate when the artist is on tour, Lyrics.ovh to get the lyrics from the top three songs and a
+                Wikipedia API for a short bio on the musician.
               </p>
             </div>
           </div>
@@ -206,21 +215,25 @@
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p>I hard coded most of the game and could have found an easier way to save my time! As I look back I notice that looping
-                through the object of questions, answer choices, answers and results combined would have been more efficient.
+              <p>I hard coded most of the game and could have found an easier way to save my time! As I look back I
+                notice that looping
+                through the object of questions, answer choices, answers and results combined would have been more
+                efficient.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>I combined the multiple choice options along with answers. There is still room for improve as far as not repeating myself
+              <p>I combined the multiple choice options along with answers. There is still room for improve as far as
+                not repeating myself
                 over and over with multiple lines of code that drive the same goal.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Notable Features</strong></div>
-              <p>The ability to implement a timer for the length of the quiz. Once the user has reachd their trivia timer limit before the completing
+              <p>The ability to implement a timer for the length of the quiz. Once the user has reachd their trivia
+                timer limit before the completing
                 the game, the session ends and shows the user their results. </p>
             </div>
           </div>
@@ -242,7 +255,8 @@
             <a class="button is-link" href="https://salmonshoe.github.io/unit-4-game/" target="_blank">Preview</a>
             <a class="button is-link" href="https://github.com/salmonshoe/unit-4-game" target="_blank">Source Code</a>
             <hr>
-            <p>This is supported by Javacript and some jQuery. The focus of this game is to guess the right number by clicking on images and the sum
+            <p>This is supported by Javacript and some jQuery. The focus of this game is to guess the right number by
+              clicking on images and the sum
               is randomized. It gives a sense of blackjack for the user.
             </p>
             <br>
@@ -257,20 +271,23 @@
           <div class="column is-half">
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
-              <p>Use JavaScript logic to build the game and implement jQuery for the website aesthetics along with HTML and CSS to support the design.
+              <p>Use JavaScript logic to build the game and implement jQuery for the website aesthetics along with HTML
+                and CSS to support the design.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p> Amain challenge I faced was giving each image a different value and pausing the game once the user surpasses the required amount to win
-                the game. 
+              <p> Amain challenge I faced was giving each image a different value and pausing the game once the user
+                surpasses the required amount to win
+                the game.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>I managed to give different adder values for the game upon load but still not for each image. There is still work to be done.</p>
+              <p>I managed to give different adder values for the game upon load but still not for each image. There is
+                still work to be done.</p>
             </div>
             <br>
           </div>
@@ -288,11 +305,14 @@
               <img src="css/logo_transparency.png" alt="project-004">
             </figure>
             <br>
-            <a class="button is-link" href="https://drive.google.com/file/d/1UaC9sAGDD_OXXHnanDL0MpaYCEH_8Bfl/view" target="_blank">UI Recording Example</a>
+            <a class="button is-link" href="https://drive.google.com/file/d/1UaC9sAGDD_OXXHnanDL0MpaYCEH_8Bfl/view"
+              target="_blank">UI Recording Example</a>
             <a class="button is-link" href="https://github.com/salmonshoe/liri-node-app" target="_blank">Source Code</a>
             <hr>
-            <p>Search for any song you like, any artist you want to see on tour, or any movie that comes across your mind! With LIRI you can type 
-              what you choose to search under these parameters and the Language Interpretation and Recognition Interface will handle your requests.
+            <p>Search for any song you like, any artist you want to see on tour, or any movie that comes across your
+              mind! With LIRI you can type
+              what you choose to search under these parameters and the Language Interpretation and Recognition Interface
+              will handle your requests.
             </p>
             <br>
             <ul class="is-size5 is-pulled-left">
@@ -303,19 +323,22 @@
           <div class="column is-half">
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
-              <p>To use the Command Line through NodeJS to take in music and movieparameters from the user, then spit back data the user requests.
+              <p>To use the Command Line through NodeJS to take in music and movieparameters from the user, then spit
+                back data the user requests.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p> Using the Spotify API was a challenge as reference errors were persistant and the use of objects had to be accurate enough to display correctly. 
+              <p> Using the Spotify API was a challenge as reference errors were persistant and the use of objects had
+                to be accurate enough to display correctly.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>I read through the spotify npm to understand how to use the documentation and ensure my process was following the directions given. It eased this assignment much more!</p>
+              <p>I read through the spotify npm to understand how to use the documentation and ensure my process was
+                following the directions given. It eased this assignment much more!</p>
             </div>
             <br>
           </div>
@@ -323,7 +346,63 @@
       </div>
     </section>
     <br>
-    
+
+    <section>
+      <div class="container has-text-centered has-text-white">
+        <h1 class="title is-size-2 has-text-white">Project: Friend Finder</h1>
+        <div class="columns">
+          <div class="column is-half">
+            <figure class="image is-3by1">
+              <img src="css/logo_transparency.png" alt="project-004">
+            </figure>
+            <br>
+            <a class="button is-link" href="https://drive.google.com/file/d/1UaC9sAGDD_OXXHnanDL0MpaYCEH_8Bfl/view"
+              target="_blank">Preview</a>
+            <a class="button is-link" href="https://github.com/salmonshoe/liri-node-app" target="_blank">Source Code</a>
+            <hr>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam aspernatur architecto dolore atque vero id
+              eaque sint deleniti soluta odit molestiae fugiat nostrum eveniet fugit, est eos minima at a assumenda cum.
+              Nobis at facere quia sit sapiente hic unde dolores voluptates corporis aperiam debitis quos odio illo vero
+              provident, soluta nesciunt maiores accusantium?
+            </p>
+            <br>
+            <ul class="is-size5 is-pulled-left">
+              <li><span class="icon"><i class="fab fa-node-js"></i></span> NodeJS</li>
+              <li><span class="icon"><i class="fab fa-node-js"></i></span> HTML, Express, MySQL?</li>
+            </ul>
+          </div>
+
+          <div class="column is-half">
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
+              <p>A web application for users to find others users who they are compatible with. It first directs a user
+                to answer a survey
+                to discover their personalities. Once the survey is completed, then the web app will display who they
+                are most compatible with
+                from the database of all previous existing users.
+              </p>
+            </div>
+            <br>
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
+              <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad doloribus ut aperiam voluptatibus
+                fugiat non eum similique, magnam debitis inventore beatae, nisi corporis quas aliquid laboriosam
+                quibusdam consequuntur. Ipsa, esse. Dolorum quibusdam ab est aliquid culpa accusamus! Soluta, officiis?
+              </p>
+            </div>
+            <br>
+            <div id="details">
+              <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eligendi possimus magnam quos
+                reiciendis similique aut aliquam ratione quibusdam quas aperiam natus, accusantium ex minus.</p>
+            </div>
+            <br>
+          </div>
+        </div>
+      </div>
+    </section>
+    <br>
+
     <div class="hero-foot has-background-grey ">
       <nav class="tabs">
         <div class="container has-text-centered">
