new project pushed

--- a/index.html
+++ b/index.html
@@ -356,19 +356,16 @@
               <img src="css/logo_transparency.png" alt="project-004">
             </figure>
             <br>
-            <a class="button is-link" href="https://drive.google.com/file/d/1UaC9sAGDD_OXXHnanDL0MpaYCEH_8Bfl/view"
+            <a class="button is-link" href="https://dry-hamlet-97199.herokuapp.com/"
               target="_blank">Preview</a>
-            <a class="button is-link" href="https://github.com/salmonshoe/liri-node-app" target="_blank">Source Code</a>
+            <a class="button is-link" href="https://github.com/salmonshoe/findFriends" target="_blank">Source Code</a>
             <hr>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam aspernatur architecto dolore atque vero id
-              eaque sint deleniti soluta odit molestiae fugiat nostrum eveniet fugit, est eos minima at a assumenda cum.
-              Nobis at facere quia sit sapiente hic unde dolores voluptates corporis aperiam debitis quos odio illo vero
-              provident, soluta nesciunt maiores accusantium?
+            <p>Find other users you are compatible with!
             </p>
             <br>
             <ul class="is-size5 is-pulled-left">
               <li><span class="icon"><i class="fab fa-node-js"></i></span> NodeJS</li>
-              <li><span class="icon"><i class="fab fa-node-js"></i></span> HTML, Express, MySQL?</li>
+              <li><span class="icon"><i class="fab fa-node-js"></i></span> HTML, Express</li>
             </ul>
           </div>
 
@@ -385,16 +382,13 @@
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad doloribus ut aperiam voluptatibus
-                fugiat non eum similique, magnam debitis inventore beatae, nisi corporis quas aliquid laboriosam
-                quibusdam consequuntur. Ipsa, esse. Dolorum quibusdam ab est aliquid culpa accusamus! Soluta, officiis?
+              <p>Understanding the syntax for routing was new to me and I have yet to implement the logic into the code for finding compatible matches.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta eligendi possimus magnam quos
-                reiciendis similique aut aliquam ratione quibusdam quas aperiam natus, accusantium ex minus.</p>
+              <p>I watched through older class videos and practiced other activities to understand the way to code with Express.js for routing.</p>
             </div>
             <br>
           </div>
