--- a/index.html
+++ b/index.html
@@ -349,46 +349,45 @@
 
     <section>
       <div class="container has-text-centered has-text-white">
-        <h1 class="title is-size-2 has-text-white">Project: Friend Finder</h1>
+        <h1 class="title is-size-2 has-text-white">Project: Eat-Da-Burger</h1>
         <div class="columns">
           <div class="column is-half">
             <figure class="image is-3by1">
               <img src="css/logo_transparency.png" alt="project-004">
             </figure>
             <br>
-            <a class="button is-link" href="https://dry-hamlet-97199.herokuapp.com/"
+            <a class="button is-link" href="https://radiant-plains-57610.herokuapp.com/"
               target="_blank">Preview</a>
-            <a class="button is-link" href="https://github.com/salmonshoe/findFriends" target="_blank">Source Code</a>
+            <a class="button is-link" href="https://github.com/salmonshoe/burger" target="_blank">Source Code</a>
             <hr>
-            <p>Find other users you are compatible with!
+            <p>A burger logger website created with the use of MySQL, Express.js, and Handlebars.
             </p>
             <br>
             <ul class="is-size5 is-pulled-left">
               <li><span class="icon"><i class="fab fa-node-js"></i></span> NodeJS</li>
-              <li><span class="icon"><i class="fab fa-node-js"></i></span> HTML, Express</li>
+              <li><span class="icon"><i class="fab fa-node-js"></i></span> Handlebars.js, Express.js, MySQL</li>
             </ul>
           </div>
 
           <div class="column is-half">
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Role</strong></div>
-              <p>A web application for users to find others users who they are compatible with. It first directs a user
-                to answer a survey
-                to discover their personalities. Once the survey is completed, then the web app will display who they
-                are most compatible with
-                from the database of all previous existing users.
+              <p>In this project, the objective is to create a website that logs in user inputs in the form of burger orders. It will be done with the help of Node.js, Express.js, Handlebars.js, and MySQL to store data.
+
+                  I will follow the Model-View-Control design pattern for the creation of this project along with the technique of object-relational mapping to convert and query data.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">Project Challenges</strong></div>
-              <p>Understanding the syntax for routing was new to me and I have yet to implement the logic into the code for finding compatible matches.
+              <p>I faced the difficulty of connecting to my database through the use of front end functionality. An ongoing challenge I faced was understanding how to separate
+                my code from the ORM file and from the Models JavaScript file. In the end, I had to see it from the lense of another person who would have to read my code.
               </p>
             </div>
             <br>
             <div id="details">
               <div class="subtitle is-size-4"><strong class="has-text-white">My Solution</strong></div>
-              <p>I watched through older class videos and practiced other activities to understand the way to code with Express.js for routing.</p>
+              <p>I practiced from my class activities to get a hang on how to use handlebars and apply object relational mapping to my project.</p>
             </div>
             <br>
           </div>
